# telemedicine

api/: pyproject.toml
api/doctor/: models.py  serializers.py  views.py
api/doctor/migrations/: 0001_initial.py  0002_rename_teacher_doctor.py
api/telemedicine/: settings.py  urls.py
ui/telemedicine-ui/: package-lock.json  package.json
